complete rework of grid with no visible bug

--- a/style/grid.css
+++ b/style/grid.css
@@ -3,60 +3,4 @@
   flex-flow: row wrap;
 }
 .cell{
-
-}
-.cell-40{
-  width:40%;
-}
-.cell-20 {
-  width:20%;
-}
-.cell-33{
-  width:33.3%;
-}
-.cell-33:nth-child(2){
-  width:33.4%;
-}
-.cell-25{
-  width:25%;
-}
-.cell-75{
-  width:75%;
-}
-.cell-100{
-  width:100%;
-}
-@media (max-width:1200px){
-  .cell-m-50{
-   width:50%;
-  }
-  .cell-m-100{
-    width:100%;
-  }
-  .cell-m-33{
-    width:33.3%;
-  }
-  .cell-m-33:nth-child(2){
-    width:33.4%;
-  }
-  .cell-m-66:{
-    width:66.6%;
-  }
-}
-@media (max-width:840px) {
-  .cell-s-50{
-   width:50%;
-  }
-  .cell-s-100{
-    width:100%;
-  }
-  .cell-s-33{
-    width:33.3%;
-  }
-  .cell-s-33:nth-child(2){
-    width:33.4%;
-  }
-  .cell-s-66:{
-    width:66.6%;
-  }
 }
